--- a/[Notes]_05_transfer_learning_in_tensorflow_part_2_fine_tuning.ipynb
+++ b/[Notes]_05_transfer_learning_in_tensorflow_part_2_fine_tuning.ipynb
@@ -4057,6 +4057,7 @@
         "id": "8du2ihQNkm4W"
       },
       "source": [
+        "# [Important]: Function\n",
         "def compare_historys(original_history, new_history, initial_epochs=5):\n",
         "    \"\"\"\n",
         "    Compares two model history objects.\n",
