--- a/[IMP_Notes]_07_food_vision_milestone_project_1.ipynb
+++ b/[IMP_Notes]_07_food_vision_milestone_project_1.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "[Notes]_07_food_vision_milestone_project_1.ipynb",
+      "name": "[IMP_Notes]_07_food_vision_milestone_project_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -1741,7 +1741,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Shubhranshu-Malhotra/Tensorflow-Developer-ZTM/blob/main/%5BNotes%5D_07_food_vision_milestone_project_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Shubhranshu-Malhotra/Tensorflow-Developer-ZTM/blob/main/%5BIMP_Notes%5D_07_food_vision_milestone_project_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -3047,7 +3047,8 @@
         "id": "DyXlCU50UElG"
       },
       "source": [
-        "## Setup mixed precision training\n",
+        "## Setup mixed precision training  \n",
+        "🟢 [Important]: Mixed Precision 🔽  \n",
         "\n",
         "We touched on mixed precision training above.\n",
         "\n",
@@ -3351,7 +3352,9 @@
         "id": "7w6Gv6ySfpNY"
       },
       "source": [
-        "Going through the above we see:\n",
+        "🟢[Important]: Layer properties🔽  \n",
+        "  \n",
+        "Going through the above we see:  \n",
         "* `layer.name` (str) : a layer's human-readable name, can be defined by the `name` parameter on construction\n",
         "* `layer.trainable` (bool) : whether or not a layer is trainable (all of our layers are trainable except the efficientnetb0 layer since we set it's `trainable` attribute to `False`\n",
         "* `layer.dtype` : the data type a layer stores its variables in\n",
@@ -4347,7 +4350,9 @@
         "If you're planning on training large models, the `ModelCheckpoint` and `EarlyStopping` are two callbacks you'll want to become very familiar with. \n",
         "\n",
         "We're almost ready to start fine-tuning our model but there's one more callback we're going to implement: [`ReduceLROnPlateau`](https://www.tensorflow.org/api_docs/python/tf/keras/callbacks/ReduceLROnPlateau).\n",
-        "\n",
+        "  \n",
+        "🟢[Important]: `ReduceLROnPlateau` Callback 🔽  \n",
+        "  \n",
         "Remember how the learning rate is the most important model hyperparameter you can tune? (if not, treat this as a reminder).\n",
         "\n",
         "Well, the `ReduceLROnPlateau` callback helps to tune the learning rate for you.\n",
