--- a/[Notes]_08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/[Notes]_08_introduction_to_nlp_in_tensorflow.ipynb
@@ -907,6 +907,8 @@
       "source": [
         "## Converting text into numbers\n",
         "\n",
+        "🟢🟢[Important]: Converting text into numbers🔽  \n",
+        "\\\n",
         "Wonderful! We've got a training set and a validation set containing Tweets and labels.\n",
         "\n",
         "Our labels are in numerical form (`0` and `1`) but our Tweets are in string form.\n",
@@ -946,7 +948,9 @@
         "\n",
         "Enough talking about tokenization and embeddings, let's create some.\n",
         "\n",
-        "We'll practice tokenzation (mapping our words to numbers) first.\n",
+        "We'll practice tokenzation (mapping our words to numbers) first.    \n",
+        "\n",
+        "🟢[Important]: tokenize using `TextVectorization`🔽  \n",
         "\n",
         "To tokenize our words, we'll use the helpful preprocessing layer [`tf.keras.layers.experimental.preprocessing.TextVectorization`](https://www.tensorflow.org/api_docs/python/tf/keras/layers/experimental/preprocessing/TextVectorization).\n",
         "\n",
@@ -1224,6 +1228,8 @@
       "source": [
         "### Creating an Embedding using an Embedding Layer\n",
         "\n",
+        "🟢[Important]: `layers.Embedding`🔽  \n",
+        "\n",
         "We've got a way to map our text to numbers. How about we go a step further and turn those numbers into an embedding?\n",
         "\n",
         "The powerful thing about an embedding is it can be learned during training. This means rather than just being static (e.g. `1` = I, `2` = love, `3` = TensorFlow), a word's numeric representation can be improved as a model goes through data samples.\n",
@@ -1431,10 +1437,12 @@
         "\n",
         "Now that we've got a way to turn our text data into numbers, we can start to build machine learning models to model it.\n",
         "\n",
-        "To get plenty of practice, we're going to build a series of different models, each as its own experiment. We'll then compare the results of each model and see which one performed best.\n",
-        "\n",
+        "To get plenty of practice, we're going to build a series of different models, each as its own experiment. We'll then compare the results of each model and see which one performed best.  \n",
+        "\\\n",
+        "🟢🟢[Important]: Types of models that can be built for experimentation🔽\n",
+        "\\\n",
         "More specifically, we'll be building the following:\n",
-        "* **Model 0**: Naive Bayes (baseline)\n",
+        "* **Model 0**: Naive Bayes (baseline) 🟢 [Important]: Common baseline (Non DL model)\n",
         "* **Model 1**: Feed-forward neural network (dense model)\n",
         "* **Model 2**: LSTM model\n",
         "* **Model 3**: GRU model\n",
