Visualizing embeddings using Embedding tool

--- a/[Notes]_08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/[Notes]_08_introduction_to_nlp_in_tensorflow.ipynb
@@ -1732,12 +1732,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kRqBIVQ3Q6aG"
+      },
+      "source": [
+        "🟢[Important]: Building a simple NLP model🔽"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "a_rVtJA7yVBI"
       },
       "source": [
-        "# Build model with the Functional API\n",
+        "# Build model with the Functional API \n",
         "from tensorflow.keras import layers\n",
         "inputs = layers.Input(shape=(1,), dtype=\"string\") # inputs are 1-dimensional strings\n",
         "x = text_vectorizer(inputs) # turn the input text into numbers\n",
@@ -2200,6 +2209,8 @@
       "source": [
         "## Visualizing learned embeddings\n",
         "\n",
+        "[Important]  \n",
+        "\n",
         "Our first model (`model_1`) contained an embedding layer (`embedding`) which learned a way of representing words as feature vectors by passing over the training data.\n",
         "\n",
         "Hearing this for the first few times may sound confusing.\n",
@@ -2320,6 +2331,8 @@
         "id": "jzOJhJHPW1ju"
       },
       "source": [
+        "🟢[Important]: `Embedding Projector tool`🔽  \n",
+        "\n",
         "Now we've got these two objects, we can use the [Embedding Projector tool](http://projector.tensorflow.org/_) to visualize our embedding. \n",
         "\n",
         "To use the Embedding Projector tool, we need two files:\n",
