Build all models and compare them

--- a/[Notes]_08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/[Notes]_08_introduction_to_nlp_in_tensorflow.ipynb
@@ -2467,8 +2467,10 @@
         "To harness the power of the LSTM cell (LSTM cell and LSTM layer are often used interchangably) in TensorFlow, we'll use [`tensorflow.keras.layers.LSTM()`](https://www.tensorflow.org/api_docs/python/tf/keras/layers/LSTM).\n",
         "\n",
         "![](https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/images/08-RNN-architecture-coloured-block-edition.png)\n",
-        "*Coloured block example of the structure of an recurrent neural network.*\n",
-        "\n",
+        "*Coloured block example of the structure of an recurrent neural network.*  \n",
+        "\\\n",
+        "🟢[Important]: Basic NLP model structure 🔽   \n",
+        "\\\n",
         "Our model is going to take on a very similar structure to `model_1`:\n",
         "\n",
         "```\n",
@@ -2488,7 +2490,7 @@
         "outputId": "d877a99e-f5e1-4bf6-9b0b-d1837106b0b1"
       },
       "source": [
-        "# Create LSTM model\n",
+        "# Create LSTM model [Important]: First LSTM model\n",
         "from tensorflow.keras import layers\n",
         "inputs = layers.Input(shape=(1,), dtype=\"string\")\n",
         "x = text_vectorizer(inputs)\n",
@@ -2833,7 +2835,7 @@
         "id": "SoSCGq3H47Yo"
       },
       "source": [
-        "# Build an RNN using the GRU cell\n",
+        "# Build an RNN using the GRU cell [Important]: First GRU model\n",
         "from tensorflow.keras import layers\n",
         "inputs = layers.Input(shape=(1,), dtype=\"string\")\n",
         "x = text_vectorizer(inputs)\n",
@@ -3166,7 +3168,7 @@
         "id": "NAU9dvGm47_2"
       },
       "source": [
-        "# Build a Bidirectional RNN in TensorFlow\n",
+        "# Build a Bidirectional RNN in TensorFlow  [Important]: First Bidirectional RNN\n",
         "from tensorflow.keras import layers\n",
         "inputs = layers.Input(shape=(1,), dtype=\"string\")\n",
         "x = text_vectorizer(inputs)\n",
@@ -4732,7 +4734,7 @@
         "outputId": "638eebac-0a17-400d-a7b7-ec25d6195a8f"
       },
       "source": [
-        "# Combine model results into a DataFrame\n",
+        "# Combine model results into a DataFrame [Important]: Compare all model results\n",
         "all_model_results = pd.DataFrame({\"baseline\": baseline_results,\n",
         "                                  \"simple_dense\": model_1_results,\n",
         "                                  \"lstm\": model_2_results,\n",
