--- a/[Notes]_08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/[Notes]_08_introduction_to_nlp_in_tensorflow.ipynb
@@ -4996,7 +4996,9 @@
       },
       "source": [
         "## Combining our models (model ensembling/stacking)\n",
-        "\n",
+        "\\\n",
+        "🟢🟢🟢   [Important]   🔽🔽  \n",
+        "\\\n",
         "Many production systems use an **ensemble** (multiple different models combined) of models to make a prediction.\n",
         "\n",
         "The idea behind model stacking is that if several uncorrelated models agree on a prediction, then the prediction must be more robust than a prediction made by a singular model.\n",
@@ -5506,8 +5508,10 @@
         "id": "V5a1648rG3z1"
       },
       "source": [
-        "## Finding the most wrong examples\n",
+        "## Finding the most wrong examples (Model Driven Data Exploration/ Active learning) \n",
         "\n",
+        "🟢[Important]🔽  \n",
+        "\\\n",
         "We mentioned before that if many of our modelling experiments are returning similar results, despite using different kinds of models, it's a good idea to return to the data and inspect why this might be.\n",
         "\n",
         "One of the best ways to inspect your data is to sort your model's predictions and find the samples it got *most* wrong, meaning, what predictions had a high prediction probability but turned out to be wrong.\n",
@@ -5773,6 +5777,22 @@
           },
           "execution_count": 113
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MU8IghhUEjlU"
+      },
+      "source": [
+        "🟢[IMPORTANT]🔽  \n",
+        "`NOT CORRECT WAY` BECAUSE PRED_PROBS CLOSER TO 1 MEANS IT IS PREDICTING LABEL ONE WITH VERY HIGH PROBABILITY\n",
+        "WHEREAS PRED_PROBS CLOSER TO 0 MEANS IT'S PREDICTING 0 WITH VERY HIGH PROBABILITY.  \n",
+        "CLOSER TO 0 DOESN'T MEAN THAT IT IS LESS WRONG.  \n",
+        "THAT'S WHY SORTING IN DESCENDING AND GETTING TOP 10 ISN'T CORRECT WAY OF VISUALIZING THE MOST WRONG PREDICTIONS.  \n",
+        "THE `CORRECT WAY` WOULD BE TO TAKE PREDICTIONS THAT ARE VERY CLOSE TO BOTH 1 OR 0 (OPPOSITE TO TRUTH LABEL).  \n",
+        "\n",
+        "> EXAMPLE: If a sentence had true label = 1 but it predicts 0 with 0.0001 probability, this is as bad as predicting another label with true label = 0 as 1 with 0.9999 probability."
       ]
     },
     {
