baseline model and tokenizing

--- a/[Notes]_09_SkimLit_nlp_milestone_project_2.ipynb
+++ b/[Notes]_09_SkimLit_nlp_milestone_project_2.ipynb
@@ -1208,7 +1208,8 @@
       },
       "source": [
         "## Model 0: Getting a baseline \n",
-        "\n",
+        "🟢[Important]🔽  \n",
+        "\\\n",
         "Our first model we'll be a TF-IDF Multinomial Naive Bayes as recommended by [Scikit-Learn's machine learning map](https://scikit-learn.org/stable/tutorial/machine_learning_map/index.html).\n",
         "\n",
         "To build it, we'll create a Scikit-Learn `Pipeline` which uses the [`TfidfVectorizer`](https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html) class to convert our abstract sentences to numbers using the TF-IDF (term frequency-inverse document frequecy) algorithm and then learns to classify our sentences using the [`MultinomialNB`](https://scikit-learn.org/stable/modules/generated/sklearn.naive_bayes.MultinomialNB.html) aglorithm."
