Convert data to a more performant form(TensorSliceDataset, PrefetchDataset)

--- a/[Practice]_09_SkimLit_nlp_milestone_project_2.ipynb
+++ b/[Practice]_09_SkimLit_nlp_milestone_project_2.ipynb
@@ -6,14 +6,9 @@
       "name": "[Practice]_09_SkimLit_nlp_milestone_project_2.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "0aQ5odiEfTSO",
-        "dyUJZF29gKrt",
-        "d0Rn_zqUhInt",
-        "htRoVc-kiftz",
-        "MADIlN1QaiTW",
-        "oaQeqXJlzUq9"
+        "dyUJZF29gKrt"
       ],
-      "authorship_tag": "ABX9TyNu5SIvhIcXai7caP/x5TDj",
+      "authorship_tag": "ABX9TyN9nGnc7RktbNhA1A2uSZrb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6143,11 +6138,162 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IEDgE9qtuoJw"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IEDgE9qtuoJw",
+        "outputId": "7353900c-64f9-4870-b9ca-3082e7affb7f"
       },
       "source": [
         "# Show an example embedding\n",
-        "print()"
+        "print(f\"Sentence before vectorization: \\n{target_sentence}\\n\")\n",
+        "vectorized_sentence = text_vectorizer([target_sentence])\n",
+        "print(f\"Sentence after vectorization:\\n{vectorized_sentence}\\n\")\n",
+        "embedded_sentence = token_embed(vectorized_sentence)\n",
+        "print(f\"Sentence after embedding:\\n{embedded_sentence}\\n\")\n",
+        "print(f\"Embedded sentence shape: {embedded_sentence.shape}\")"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sentence before vectorization: \n",
+            "individuals were eligible to participate if they were between the ages of @ and @ years , had intermediate or advanced age-related macular degeneration in @ eye , and were willing to be randomized .\n",
+            "\n",
+            "Sentence after vectorization:\n",
+            "[[ 348    9  518    6 1378  324  316    9   30    2 1588    4    3   64\n",
+            "    55 2122   16  588 2450 1541 2957    5  672    3    9 5237    6   36\n",
+            "    29    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+            "     0    0    0    0    0    0    0    0    0    0    0    0    0]]\n",
+            "\n",
+            "Sentence after embedding:\n",
+            "[[[ 0.04006271 -0.04972103 -0.04704149 ...  0.03388217  0.04114408\n",
+            "   -0.04421964]\n",
+            "  [ 0.00749898 -0.02258774  0.01702768 ...  0.00741122 -0.03729299\n",
+            "    0.02408748]\n",
+            "  [-0.03621539 -0.03202527  0.04803921 ...  0.04978568  0.04226847\n",
+            "    0.03979366]\n",
+            "  ...\n",
+            "  [ 0.02438687  0.03999264  0.031976   ...  0.03624495  0.03311428\n",
+            "    0.00786662]\n",
+            "  [ 0.02438687  0.03999264  0.031976   ...  0.03624495  0.03311428\n",
+            "    0.00786662]\n",
+            "  [ 0.02438687  0.03999264  0.031976   ...  0.03624495  0.03311428\n",
+            "    0.00786662]]]\n",
+            "\n",
+            "Embedded sentence shape: (1, 55, 128)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9PBbRuS7v85y"
+      },
+      "source": [
+        "## Creating highly performant datasets (making sure our data loads as fast as possible)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TpZIaZtZxDZN",
+        "outputId": "efcba342-8d3d-4621-feaf-80e65fc58c01"
+      },
+      "source": [
+        "# Turn out data into Tensorflow datasets\n",
+        "train_dataset = tf.data.Dataset.from_tensor_slices((train_sentences, train_labels_one_hot))\n",
+        "valid_dataset = tf.data.Dataset.from_tensor_slices((val_sentences, val_labels_one_hot))\n",
+        "test_dataset = tf.data.Dataset.from_tensor_slices((test_sentences, test_labels_one_hot))\n",
+        "\n",
+        "train_dataset"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<TensorSliceDataset shapes: ((), (5,)), types: (tf.string, tf.float64)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bFw6S2QRxvLM",
+        "outputId": "7902524b-bfaa-4065-d46f-308750218571"
+      },
+      "source": [
+        "train_labels_one_hot[0], train_labels_one_hot.shape"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([0., 0., 0., 1., 0.]), (180040, 5))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IdMNdhwKyDN3",
+        "outputId": "00cac470-ee81-40b5-c92f-eeb19ce52372"
+      },
+      "source": [
+        "# Convert the TensorSliceDataset to PrefetchDataset\n",
+        "# We are not shuffling the train data here as order is important for our usecase. \n",
+        "# We might want the model to learn the order in which various sections appear in an abstract.\n",
+        "train_dataset = train_dataset.batch(32).prefetch(tf.data.AUTOTUNE)\n",
+        "valid_dataset = valid_dataset.batch(32).prefetch(tf.data.AUTOTUNE)\n",
+        "test_dataset = test_dataset.batch(32).prefetch(tf.data.AUTOTUNE)\n",
+        "\n",
+        "train_dataset"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<PrefetchDataset shapes: ((None,), (None, 5)), types: (tf.string, tf.float64)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xbCP0TRnzVS2"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
