Try using Conv1D (model_1)

--- a/[Practice]_09_SkimLit_nlp_milestone_project_2.ipynb
+++ b/[Practice]_09_SkimLit_nlp_milestone_project_2.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "dyUJZF29gKrt"
       ],
-      "authorship_tag": "ABX9TyN9nGnc7RktbNhA1A2uSZrb",
+      "authorship_tag": "ABX9TyO/eP94d5YcMFjI4M9568x9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6288,9 +6288,381 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "xbCP0TRnzVS2"
+      },
+      "source": [
+        "## Model 1: Conv1D with token embeddings"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XDXua45Pz7Y8",
+        "outputId": "9f65308f-8760-49d8-d355-97fb5ac633d9"
+      },
+      "source": [
+        "# Create a 1D conv model to process sequences\n",
+        "inputs = layers.Input(shape = (1,), dtype = tf.string)\n",
+        "text_vectors = text_vectorizer(inputs)\n",
+        "text_embeddings = token_embed(text_vectors)\n",
+        "x = layers.Conv1D(64, kernel_size= 5, padding = 'same', activation = 'relu')(text_embeddings)\n",
+        "x = layers.GlobalAveragePooling1D()(x)\n",
+        "outputs = layers.Dense(num_classes, activation = 'sigmoid')(x)\n",
+        "\n",
+        "model_1 = tf.keras.Model(inputs, outputs)\n",
+        "\n",
+        "model_1.compile(loss = tf.keras.losses.CategoricalCrossentropy(),\n",
+        "                optimizer = tf.keras.optimizers.Adam(),\n",
+        "                metrics = ['accuracy'])\n",
+        "\n",
+        "model_1.summary()"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"model_2\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "input_3 (InputLayer)         [(None, 1)]               0         \n",
+            "_________________________________________________________________\n",
+            "text_vectorization (TextVect (None, 55)                0         \n",
+            "_________________________________________________________________\n",
+            "token_embedding (Embedding)  (None, 55, 128)           8299648   \n",
+            "_________________________________________________________________\n",
+            "conv1d_2 (Conv1D)            (None, 55, 64)            41024     \n",
+            "_________________________________________________________________\n",
+            "global_average_pooling1d_2 ( (None, 64)                0         \n",
+            "_________________________________________________________________\n",
+            "dense_2 (Dense)              (None, 5)                 325       \n",
+            "=================================================================\n",
+            "Total params: 8,340,997\n",
+            "Trainable params: 8,340,997\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W9gU_inD2SJx",
+        "outputId": "bae7bb92-029b-4308-8893-92f570d6f75d"
+      },
+      "source": [
+        "len(train_dataset)"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5627"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A91sd87t2Vsx",
+        "outputId": "6ebc6848-7e3b-4480-f348-004b74c526b6"
+      },
+      "source": [
+        "# There are a lot of sentences. We need to reduce the samples that we will train.\n",
+        "5627 * 32"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "180064"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CGXsXRYa1quX",
+        "outputId": "32355c5f-391b-4fb1-82ed-b362a9985d2c"
+      },
+      "source": [
+        "history_model_1 = model_1.fit(train_dataset,\n",
+        "                              steps_per_epoch = int(0.1 * (len(train_dataset))), # only look at 10% of the data during each epoch\n",
+        "                              batch_size = 32,\n",
+        "                              epochs = 3,\n",
+        "                              validation_data = valid_dataset,\n",
+        "                              validation_steps = int(0.1 * len(valid_dataset)) # only validate on 10% of valid_data each epoch\n",
+        "                              )"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/3\n",
+            "562/562 [==============================] - 39s 14ms/step - loss: 0.9181 - accuracy: 0.6382 - val_loss: 0.6882 - val_accuracy: 0.7380\n",
+            "Epoch 2/3\n",
+            "562/562 [==============================] - 8s 13ms/step - loss: 0.6551 - accuracy: 0.7592 - val_loss: 0.6274 - val_accuracy: 0.7709\n",
+            "Epoch 3/3\n",
+            "562/562 [==============================] - 8s 14ms/step - loss: 0.6144 - accuracy: 0.7765 - val_loss: 0.5954 - val_accuracy: 0.7842\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Aq2JOpvQ3CaS",
+        "outputId": "aea45fa1-307d-4ec8-8f33-6b38d227df05"
+      },
+      "source": [
+        "model_1.evaluate(valid_dataset)"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "945/945 [==============================] - 4s 5ms/step - loss: 0.5956 - accuracy: 0.7872\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.5955623388290405, 0.7872368693351746]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HVkcZkC43ZAt",
+        "outputId": "025fefcb-3cbe-49a5-be11-c5620b803949"
+      },
+      "source": [
+        "# Make predictions on our validation data\n",
+        "model_1_pred_probs = model_1.predict(valid_dataset)\n",
+        "model_1_pred_probs[:10], model_1_pred_probs.shape"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([[7.41160631e-01, 4.66223389e-01, 2.12956995e-01, 6.58347547e-01,\n",
+              "         1.23239890e-01],\n",
+              "        [7.94296622e-01, 7.04291046e-01, 1.28144562e-01, 6.83637977e-01,\n",
+              "         8.06759968e-02],\n",
+              "        [9.29617167e-01, 3.14325958e-01, 1.12679288e-01, 9.85857964e-01,\n",
+              "         1.60497997e-03],\n",
+              "        [6.37508696e-03, 2.25628316e-01, 9.97225702e-01, 5.40457200e-03,\n",
+              "         9.11811471e-01],\n",
+              "        [2.19222866e-02, 5.51446378e-01, 8.86787415e-01, 1.68028418e-02,\n",
+              "         9.50513542e-01],\n",
+              "        [2.16960728e-01, 2.69837260e-01, 8.76348972e-01, 1.13668576e-01,\n",
+              "         8.21391106e-01],\n",
+              "        [3.54878902e-02, 2.21800163e-01, 9.44214582e-01, 1.65432524e-02,\n",
+              "         9.78157938e-01],\n",
+              "        [2.58836150e-01, 2.42161497e-01, 8.88043880e-01, 1.53012231e-01,\n",
+              "         7.61780441e-01],\n",
+              "        [2.22624403e-05, 2.54748017e-01, 5.75633883e-01, 6.02693899e-06,\n",
+              "         9.99999881e-01],\n",
+              "        [5.53374290e-02, 8.60469699e-01, 2.57495493e-01, 1.09924622e-01,\n",
+              "         5.64235032e-01]], dtype=float32), (30212, 5))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g4t_UWRG4DeO",
+        "outputId": "6df56adc-e79d-4aea-80fd-254e8ac463af"
+      },
+      "source": [
+        "model_1_preds = tf.argmax(model_1_pred_probs, axis = 1)\n",
+        "model_1_preds"
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(30212,), dtype=int64, numpy=array([0, 0, 3, ..., 4, 1, 1])>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eDanDHTe4Qzm",
+        "outputId": "0f4fd2f5-bca9-46a9-cef4-0f1b2cdb1afe"
+      },
+      "source": [
+        "class_names"
+      ],
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['BACKGROUND', 'CONCLUSIONS', 'METHODS', 'OBJECTIVE', 'RESULTS'],\n",
+              "      dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 74
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sNlfnLJ23lo5",
+        "outputId": "0c4e8d6e-c8a4-4053-98c6-0a2fa47c5e81"
+      },
+      "source": [
+        "val_labels_encoded"
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 0, 3, ..., 4, 1, 1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 68
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bFODQG0S3m7Z",
+        "outputId": "74906c2e-7f38-45f3-cdf4-30879dd0294b"
+      },
+      "source": [
+        "# Calculate model 1 results\n",
+        "model_1_results = calculate_results(val_labels_encoded, model_1_preds)\n",
+        "model_1_results"
+      ],
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 78.72368595260161,\n",
+              " 'f1': 0.7843787006030121,\n",
+              " 'precision': 0.7837391824999433,\n",
+              " 'recall': 0.7872368595260162}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qvh4DBHF4b7e",
+        "outputId": "266c59e5-7815-4fe9-d79b-9d5cf466a1a1"
+      },
+      "source": [
+        "baseline_results"
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 72.1832384482987,\n",
+              " 'f1': 0.6989250353450294,\n",
+              " 'precision': 0.7186466952323352,\n",
+              " 'recall': 0.7218323844829869}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-YJS46h34jCh"
       },
       "source": [
         ""
